# cipher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scope.md
.github/workflows/: cipher-ci.yml
src/: run.py
src/files/: file_handler.py  reader.py  saver.py
src/hashers/: cipher.py  rot13.py  rot13_cipher.py  rot47.py  text.py
src/helpers/: memory_buffer.py  text.py
src/managers/: manager.py
src/menus/: menu.py
tests/: run_unit_test.py  test_read.json  test_read_manager.json
tests/files/: test_file_handler.py  test_saver.py
tests/hashers/: test_rot13.py  test_rot13_cipher.py  test_rot47.py  test_rot47_cipher.py
tests/helpers/: test_memory_buffer.py  test_text.py
tests/managers/: test.json  test_manager.py
tests/menus/: test_menu.py
