[tool.poetry]
name = "cipher"
version = "0.1.0"
description = ""
authors = ["<no_autho>@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
