[tool.poetry]
name = "cipher"
version = "0.1.0"
description = ""
authors = ["<no_autho>@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
safety = "^3.2.3"
bandit = "^1.7.9"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
